# doc-sorter

./: .gitignore  CMakeLists.txt  README.md  whatido.txt
data/: EN-Stopwords.txt
include/: auth.hpp  doc_vec.hpp  drive_client.hpp  kmeans.hpp
src/: auth.cpp  doc_vec.cpp  drive_client.cpp  kmeans.cpp  main.cpp
